--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -3092,4 +3092,8 @@ You can quit this session or embark on another journey to a new destination.</co
   <data name="Error.ApplicationInitializationError" xml:space="preserve">
     <value>Infinite Flight could not launch due to a problem. Please try restarting or contact support. (error code {0})</value>
   </data>
+  <data name="FlightFreeControl.AirportTooSmall" xml:space="preserve">
+    <value>{0} is too small for your aircraft. Choose another airport.</value>
+    <comment>{0} is airport ICAO</comment>
+  </data>
 </root>
